--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 html {
-    color: white;
+    color: rgb(221, 212, 212);
     font-family: Nurom;
     background-color: black;
-    text-align: center;
     display: grid;
     cursor: pointer;
     transition: background 1s ease;
@@ -11,12 +10,15 @@ html {
 
 header {
     font-size: xx-large;
-    background-color: darkslategray;
+    background-color: #393939;
     padding: 10px;
-    letter-spacing: 3px;
+    border-radius: 20px 4px 20px;
+    text-align: center;
 }
 
 input {
+    width: 60%;
+    height: 50px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -25,14 +27,24 @@ button {
     height: 100px;
     font-size: xx-large;
     font-family: Nurom;
-    background-color: #1e1e2f;
-    color: white;
+    background-color: #393939;
+    color: rgb(221, 212, 212);
     padding: 12px 20px;
     border: none;
     border-radius: 8px;
-    letter-spacing: 3px;
 
 
+}
+
+footer {
+    width: 100%;
+    height: 50px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    background-color: #393939;
+    text-align: center;
+    padding: 10px 0;
 }
 
 @font-face {
