--- a/style.css
+++ b/style.css
@@ -70,6 +70,8 @@ button:hover {
     color: white;
     display: flex;
     justify-content: left;
+    padding: 20px;
+    border: 5px, #393939;
 }
 
 footer {
